<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_detail_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sp_0"
        android:background="@drawable/agave_icon"
        android:contentDescription="@string/app_name"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".60"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/lo_information"
        layout="@layout/layout_information_beer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/iv_detail_logo"
        app:layout_constraintLeft_toLeftOf="@id/iv_detail_logo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sp_0"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".40"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_logo"
        tools:layout_editor_absoluteX="-31dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile_card"
            android:layout_width="@dimen/sp_40"
            android:layout_height="@dimen/sp_40"
            app:cardCornerRadius="@dimen/sp_100"
            android:backgroundTint="@color/textColorDark"
            android:layout_margin="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/tv_detail_label_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sp_16"
            android:fontFamily="@font/regular"
            android:text="@string/description"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="@+id/cv_profile_card"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sp_16"
            android:fontFamily="@font/light"
            android:text="@string/app_name"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_label_description" />

        <TextView
            android:id="@+id/tv_detail_label_fbd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sp_16"
            android:fontFamily="@font/regular"
            android:text="@string/first_brewed_date"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_description" />

        <TextView
            android:id="@+id/tv_detail_fbd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sp_16"
            android:fontFamily="@font/light"
            android:text="@string/app_name"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_label_fbd" />

        <TextView
            android:id="@+id/tv_detail_label_fp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sp_16"
            android:fontFamily="@font/regular"
            android:text="@string/food_pairing"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_fbd" />

        <TextView
            android:id="@+id/tv_detail_fp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sp_16"
            android:fontFamily="@font/light"
            android:text="@string/app_name"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_label_fp" />

        <TextView
            android:id="@+id/tv_detail_label_abv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sp_16"
            android:fontFamily="@font/regular"
            android:text="@string/abv"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_fp" />

        <TextView
            android:id="@+id/tv_detail_abv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sp_16"
            android:fontFamily="@font/light"
            android:text="@string/app_name"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_label_abv" />

        <TextView
            android:id="@+id/tv_detail_label_ibu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sp_16"
            android:fontFamily="@font/regular"
            android:text="@string/ibu"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_abv" />

        <TextView
            android:id="@+id/tv_detail_ibu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sp_16"
            android:fontFamily="@font/light"
            android:text="@string/app_name"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_label_ibu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>